# convex-schema-parser

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASE_NOTES.md  convex-schema-parser.cabal  justfile
.github/workflows/: release.yml
app/: Config.hs  Dev.hs  Init.hs  Main.hs
example/: .gitignore  README.md  convex-parser.yaml  schema.ts
example/convex-example/: package.json  pnpm-lock.yaml  tsconfig.declarations.json  tsconfig.json
example/convex-example/convex/: listMessages.ts  sendMessage.ts
example/python-client-1/: main.py  papi.py
example/python-client-2/: main.py  papi.py
example/rust-client/: Cargo.toml
example/rust-client/src/: main.rs  papi.rs
npm/: install.js  package.json  run.js
src/: PathTree.hs
src/Backend/: Python.hs  Rust.hs
src/Backend/Python/: Validator.hs
src/Backend/Rust/: Validator.hs
src/Convex/: Parser.hs  Validator.hs
src/Convex/Action/: Parser.hs
src/Convex/Client/: Client.hs  Types.hs
src/Convex/Schema/: Parser.hs
test/: ActionParserTest.hs  ApiParserTest.hs  Main.hs  RustSerializationTest.hs  SchemaParserTest.hs  UnificationTest.hs
