cabal-version:   3.0
name:            convex-schema-parser
version:         0.1.0.0
license:         NONE
author:          Norbert Dzikowski
maintainer:      lambdax.one@icloud.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library convex-schema-parser-lib
    import:           warnings
    exposed-modules:  Convex.Schema.Parser
        , Convex.Action.Parser
        , Convex.Parser
        , Backend.Python
        , Backend.Rust
    build-depends:    base
        , parsec
        , mtl
        , containers
        , filepath
    hs-source-dirs:   src
    default-language: Haskell2010

executable convex-schema-parser
    main-is:          Main.hs
    other-modules:    Dev
        , Config
    build-depends:    base,
                      convex-schema-parser-lib,
                      parsec,
                      optparse-applicative,
                      fsnotify,
                      process,
                      directory,
                      yaml,
                      aeson,
                      stm,
                      deepseq
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test-convex-parser
    type:                exitcode-stdio-1.0
    main-is:             Main.hs
    other-modules:       ActionParserTest
        , ApiParserTest
    hs-source-dirs:      test
    build-depends:       base,
                         HUnit,
                         parsec,
                         mtl,
                         containers,
                         convex-schema-parser-lib
    default-language:    Haskell2010
