cabal-version:   3.0
name:            convex-schema-parser
version:         0.1.2
license:         MIT
author:          Norbert Dzikowski
maintainer:      lambdax.one@icloud.com
copyright:       (c) 2025 Parsonos Corporation
build-type:      Simple
extra-doc-files: CHANGELOG.md, README.md

synopsis:        A type-safe client generator for Convex for both Rust and Python.
description:
    `convex-schema-parser` is a command-line tool designed to parse
    your Convex project's schema and function definitions, generating
    strongly-typed API clients for both Rust and Python.
    .
    It offers two primary modes of operation:
    .
    1. A one-shot `generate` command for manual client generation.
    2. A persistent `dev` mode that watches your Convex project for changes
       and automatically regenerates your clients, providing a seamless
       development experience.
    .
    The tool is designed to be easy to use, with a simple `init` command to
    get started and a flexible YAML configuration for the development watcher.
category:        Development, Code Generation, Web
homepage:        https://github.com/parsonosai/convex-schema-parser
bug-reports:     https://github.com/parsonosai/convex-schema-parser/issues

tested-with:     GHC == 9.10.1

source-repository head
    type:     git
    location: https://github.com/parsonosai/convex-schema-parser.git

common warnings
    ghc-options: -Wall

library convex-schema-parser-lib
    import:           warnings
    exposed-modules:  Convex.Schema.Parser
        , Convex.Action.Parser
        , Convex.Parser
        , Convex.Validator
        , PathTree
        , Backend.Python
        , Backend.Python.Validator
        , Backend.Rust
        , Backend.Rust.Validator
    build-depends:    base
        , parsec
        , mtl
        , containers
        , filepath
        , split
        , directory
        , process
    hs-source-dirs:   src
    default-language: Haskell2010

executable convex-schema-parser
    main-is:          Main.hs
    other-modules:    Dev
        , Config
        , Init
    build-depends:    base,
                      convex-schema-parser-lib,
                      parsec,
                      optparse-applicative,
                      fsnotify,
                      process,
                      directory,
                      yaml,
                      aeson,
                      stm,
                      deepseq,
                      filepath
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test-convex-parser
    type:                exitcode-stdio-1.0
    main-is:             Main.hs
    other-modules:       ActionParserTest
        , ApiParserTest
        , SchemaParserTest
        , RustSerializationTest
    hs-source-dirs:      test
    build-depends:       base,
                         HUnit,
                         parsec,
                         mtl,
                         containers,
                         convex-schema-parser-lib
    default-language:    Haskell2010
