cabal-version:   3.0
name:            convex-schema-parser
version:         0.1.3
license:         MIT
author:          Norbert Dzikowski
maintainer:      lambdax.one@icloud.com
copyright:       (c) 2025 Parsonos Corporation
build-type:      Simple
extra-doc-files: CHANGELOG.md, README.md

synopsis:        A type-safe client generator for Convex for both Rust and Python.
description:
    A command-line tool designed to parse your Convex project's schema and
    function definitions, generating strongly-typed API clients for both Rust
    and Python.
category:        Development, Code Generation, Web
homepage:        https://github.com/parsonosai/convex-schema-parser
bug-reports:     https://github.com/parsonosai/convex-schema-parser/issues

tested-with:     GHC == 9.10.1

source-repository head
    type:     git
    location: https://github.com/parsonosai/convex-schema-parser.git

common warnings
    ghc-options: -Wall

library convex-schema-parser-lib
    import:           warnings
    exposed-modules:  Convex.Schema.Parser
        , Convex.Action.Parser
        , Convex.Parser
        , Convex.Validator
        , PathTree
        , Backend.Python
        , Backend.Python.Validator
        , Backend.Rust
        , Backend.Rust.Validator
    build-depends:    base >= 4.18.3 && < 4.21
        , parsec >= 3.1.17 && < 3.2
        , mtl >= 2.3.1 && < 2.4
        , containers >= 0.7 && < 0.8
        , filepath >= 1.5.2 && < 1.6
        , split >= 0.2.5 && < 0.3
        , directory >= 1.3.8 && < 1.4
        , process >= 1.6.19 && < 1.7
    hs-source-dirs:   src
    default-language: Haskell2010

executable convex-schema-parser
    main-is:          Main.hs
    other-modules:    Dev
        , Config
        , Init
    build-depends:    base,
                      convex-schema-parser-lib,
                      parsec,
                      optparse-applicative >= 0.19.0 && < 0.20,
                      fsnotify >= 0.4.3 && < 0.5,
                      process,
                      directory,
                      yaml >= 0.11.11 && < 0.12,
                      aeson >= 2.2.3 && < 2.3,
                      stm >= 2.5.3 && < 2.6,
                      deepseq >= 1.5.0 && < 1.6,
                      filepath
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test-convex-parser
    type:                exitcode-stdio-1.0
    main-is:             Main.hs
    other-modules:       ActionParserTest
        , ApiParserTest
        , SchemaParserTest
        , RustSerializationTest
    hs-source-dirs:      test
    build-depends:       base,
                         HUnit >=1.6.0 && < 1.7,
                         parsec,
                         mtl,
                         containers,
                         convex-schema-parser-lib
    default-language:    Haskell2010
