[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
convex = "0.9.0"
thiserror = "1.0"
anyhow = "1.0"
futures-util = "0.3"
